filled_SSS_DONE

--- a/index.html
+++ b/index.html
@@ -336,17 +336,17 @@
                 <div class="sign-div">
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="text" name="printed" placeholder="Printed Name">
+                            <input type="text" name="printed_name" placeholder="Printed Name">
                         </div>
                     </div>
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="text" name="signature" placeholder="Signature">
+                            <input type="text" name="cert_signature" placeholder="Signature">
                         </div>
                     </div>
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="date" name="date" placeholder="Date">
+                            <input type="date" name="cert_date" placeholder="Date">
                         </div>
                     </div>
                 </div>
@@ -354,8 +354,8 @@
         <div class="finger-div">
             <div class="sub-name">Registrant is required to affix fingerprints</div>
             <div class="input-div">
-                <input type="text" name="right" placeholder="Your right thumb">
-                <input type="text" name="right" placeholder="Your right index">
+                <input type="text" name="right_thumb" placeholder="Your right thumb">
+                <input type="text" name="right_index" placeholder="Your right index">
             </div>
         </div>
     </div>
@@ -370,30 +370,30 @@
             <div class="subleft-con">
                 <div class="name">Business Code (For SE)</div>
                 <div class="input-div">
-                    <input type="text" name="bc" placeholder="Your Answer">
+                    <input type="text" name="business_code" placeholder="Your Answer">
                 </div>
                 <div class="name">Monthly Contribution (SE/OFW/NWS)</div>
                 <div class="input-div">
-                    <input type="text" name="monthly_business" placeholder="Your Answer">
+                    <input type="text" name="monthly_contribution" placeholder="Your Answer">
                 </div>
                 <div class="name">Start of Payment (For SE/NWS)</div>
                 <div class="input-div">
-                    <input type="text" name="payment" placeholder="Your Answer">
+                    <input type="date" name="start_payment" placeholder="Your Answer">
                 </div>
             </div>
             <div class="subright-con">
                 <div class="name">Working Spouse's MSC (For NWS)</div>
                 <div class="input-div">
-                    <input type="text" name="working" placeholder="Your Answer">
+                    <input type="text" name="working_spouse" placeholder="Your Answer">
                 </div>
                 <div class="name">Approved MSC (For SE/OFW/NWS)</div>
                 <div class="input-div">
-                    <input type="text" name="approved" placeholder="Your Answer">
+                    <input type="text" name="approved_msc" placeholder="Your Answer">
                 </div>
                 <div class="name">Flexi-Fund Application (For OFW)</div>
                 <div class="approvedinput-div">
-                    <input type="radio" name="flexi" value="approved">Approved
-                    <input type="radio" name="flexi" value="disapproved">Disapproved
+                    <input type="radio" name="flexi_fund" value="approved">Approved
+                    <input type="radio" name="flexi_fund" value="disapproved">Disapproved
                 </div>
             </div>
 
@@ -406,12 +406,12 @@
                     <div class="sign-div">
                         <div class="subsign-div">
                             <div class="input-div">
-                                <input type="text" class="received" placeholder="Signature">
+                                <input type="text" name="received_signature" placeholder="Signature">
                             </div>
                         </div>
                         <div class="subsign-div">
                             <div class="input-div">
-                                <input type="text" class="date" placeholder="Date & Time">
+                                <input type="date" name="received_date" placeholder="Date & Time">
                             </div>
                         </div>
                     </div>
@@ -421,12 +421,12 @@
                     <div class="sign-div">
                         <div class="subsign-div">
                             <div class="input-div">
-                                <input type="text" name="signature" placeholder="Signature">
+                                <input type="text" name="processed_signature" placeholder="Signature">
                             </div>
                         </div>
                         <div class="subsign-div">
                             <div class="input-div">
-                                <input type="text" name="date" placeholder="Date & Time">
+                                <input type="date" name="processed_date" placeholder="Date & Time">
                             </div>
                         </div>
                     </div>
@@ -437,12 +437,12 @@
                 <div class="sign-div">
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="text" name="signature" placeholder="Signature">
+                            <input type="text" name="reviewed_signature" placeholder="Signature">
                         </div>
                     </div>
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="text" name="date" placeholder="Date & Time">
+                            <input type="date" name="reviewed_date" placeholder="Date & Time">
                         </div>
                     </div>
                 </div>
